--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+
+kapt {
+    generateStubs = true
+}
 
 android {
     compileSdkVersion 29
@@ -48,4 +53,24 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'io.michaelrocks:libphonenumber-android:8.12.3'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+
+    implementation 'com.github.moxy-community:moxy:1.0.13'
+    annotationProcessor 'com.github.moxy-community:moxy-compiler:1.0.13'
+    implementation 'com.github.moxy-community:moxy-androidx:1.0.13'
+    implementation 'com.github.moxy-community:moxy-material:1.0.13'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-rxjava2:2.2.5'
+
+
+    implementation "com.google.dagger:dagger:2.27"
+    implementation "com.google.dagger:dagger-android:2.20"
+    implementation "com.google.dagger:dagger-android-support:2.20"
+    kapt "com.google.dagger:dagger-android-processor:2.20"
+    kapt "com.google.dagger:dagger-compiler:2.21"
+    kapt "com.google.dagger:dagger-android-support:2.20"
 }
