--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'io.michaelrocks:libphonenumber-android:8.12.3'
+   // implementation 'io.michaelrocks:libphonenumber-android:8.12.3'
+    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.8'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 
     implementation 'com.github.moxy-community:moxy:1.0.13'
